Akregator ChangeLog
===================
(c) 2004-2006 the Akregator authors.

Changes after 1.2:
-----------------------------

Bug fixes:

 2006/01/16 Fix article order in Combined View: sort by date (reversed) (#118055) -fo
 2006/01/15 Fix parsing of Atom 1.0 feeds with escaped HTML in it: Don't show tags
            as text (#112491, #117938) -fo
 2006/01/10 Select next item in article list when deleting the selected article
            (single selection mode only) (#119724) -fo
 2006/01/10 Fix item handling in the feed list, avoid crashes as happening 
            after moving a folder and deleting a subitem afterwards 
            (#118659) -fo
 2006/01/08 Fix problems with keyboard navigation getting stuck on duplicated
            articles and prevent creation of new items when selecting an unread
            dupe (#114997) -fo
 2005/12/05 Wait 30 minutes before retrying fetching when fetching failed (host
            down, parsing error) (#113358) -fo

Changes after 1.0:
-----------------------------

Note: This section (i.e. changes between 1.0 and 1.2) is completely incomplete

New features:
       - add "Save link as" to context menus -fo
       
Changes:
       - Changed prev/next unread article actions to cycle through all unread articles -fo	
       - The article archive is now configurable, using metakit implementation as default.
         This increases startup speed and reduces memory usage significantly -fo
       - Make it possible to fetch feeds while other fetches are running -fo
       
Bug fixes:

	- Respect markImmediatelyAsRead setting when updating articles (#103502) -fo
	- make "fetch feeds on startup" option work again (#102085) -fo
	- Fix favicons, load them on startup (#94888) -fo
	- make BrowserRun delete itself when the Viewer gets destroyed (#101413) -tpr
        - tolerate leading and trailing whitespace in the Add Feed Dialog (#101988) -fo
        - fixed confusion of "disable archiving" and expiry by age (#101907) -fo